# codetask

./: .gitignore  AGENTS.md  CONTRIBUTING.md  INCIDENT-draft-phase-mismatch.md  NOTICE  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.control-plane.json  tsconfig.node.json  tsconfig.web.json
.github/: CI_KNOWN_ISSUES.md  RELEASE.md
.github/workflows/: build.yml  ci.yml  release.yml  sandbox.yml
docs/: README.ja.md  README.zh-CN.md
docs/adr/: 0001-host-auth-and-control-plane.md
native/: Cargo.toml
native/codeteam-linux-sandbox/: Cargo.toml  build.rs
native/codeteam-linux-sandbox/src/: bazel_bwrap.rs  bundled_bwrap.rs  bwrap.rs  exec_util.rs  landlock.rs  launcher.rs  lib.rs  linux_run_main.rs  linux_run_main_tests.rs  main.rs  proxy_routing.rs
native/codeteam-linux-sandbox/tests/: all.rs
native/codeteam-linux-sandbox/tests/suite/: landlock.rs  managed_proxy.rs  mod.rs
native/codeteam-network-proxy/: Cargo.toml  README.md
native/codeteam-network-proxy/src/: certs.rs  config.rs  connect_policy.rs  http_proxy.rs  lib.rs  mitm.rs  mitm_tests.rs  network_policy.rs  policy.rs  proxy.rs  reasons.rs  responses.rs  runtime.rs  socks5.rs  state.rs  upstream.rs
native/codeteam-otel/: Cargo.toml
native/codeteam-otel/src/: lib.rs
native/codeteam-process-hardening/: Cargo.toml
native/codeteam-process-hardening/src/: lib.rs
native/codeteam-sandbox/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json  runner-entry.js  setup-entry.js
native/codeteam-sandbox-adapter/: Cargo.toml
native/codeteam-sandbox-adapter/src/: lib.rs
native/codeteam-sandbox-policy/: Cargo.toml
native/codeteam-sandbox-policy/src/: config_types.rs  error.rs  legacy.rs  lib.rs  models_profile.rs  permissions.rs
native/codeteam-sandbox/src/: attestation.rs  helper.rs  lib.rs  linux.rs  macos.rs  pipe_reader.rs  protocol.rs  spawn.rs
native/codeteam-sandbox/src/policies/: seatbelt_base_policy.sbpl
native/codeteam-sandbox/src/windows/: elevated_child.rs  mod.rs  run.rs  setup.rs
native/codeteam-sandboxing/: Cargo.toml
native/codeteam-sandboxing/src/: bwrap.rs  bwrap_tests.rs  landlock.rs  landlock_tests.rs  lib.rs  manager.rs  manager_tests.rs  policy_transforms.rs  policy_transforms_tests.rs  seatbelt.rs  seatbelt_tests.rs
native/codeteam-utils-absolute-path/: Cargo.toml
native/codeteam-utils-absolute-path/src/: absolutize.rs  lib.rs
native/codeteam-utils-pty/: Cargo.toml
native/codeteam-utils-pty/src/: lib.rs  pipe.rs  process.rs  process_group.rs  pty.rs  tests.rs
native/codeteam-utils-pty/src/win/: conpty.rs  mod.rs  procthreadattr.rs  psuedocon.rs
native/codeteam-utils-string/: Cargo.toml
native/codeteam-utils-string/src/: json.rs  lib.rs  truncate.rs
native/codeteam-utils-string/src/truncate/: tests.rs
native/codeteam-windows-sandbox/: Cargo.toml  build.rs
native/codeteam-windows-sandbox/src/: acl.rs  allow.rs  audit.rs  cap.rs  deny_read_acl.rs  deny_read_resolver.rs  deny_read_state.rs  desktop.rs  dpapi.rs  elevated_impl.rs  env.rs  helper_materialization.rs  hide_users.rs  host_launcher.rs  identity.rs  lib.rs  logging.rs  path_normalization.rs  policy.rs  proc_thread_attr.rs  process.rs  sandbox_utils.rs  setup.rs  setup_error.rs  spawn_prep.rs  ssh_config_dependencies.rs  token.rs  wfp.rs  wfp_setup.rs  winutil.rs  workspace_acl.rs
native/codeteam-windows-sandbox/src/conpty/: mod.rs
native/codeteam-windows-sandbox/src/elevated/: ipc_framed.rs  mod.rs  runner_client.rs  runner_pipe.rs
native/codeteam-windows-sandbox/src/unified_exec/: mod.rs  tests.rs
native/codeteam-windows-sandbox/src/unified_exec/backends/: elevated.rs  legacy.rs  mod.rs  windows_common.rs
native/codeteam-windows-sandbox/src/wfp/: filter_specs.rs
native/scripts/: copy-helpers.mjs
scripts/: api-latency-test.mjs  build-standalone.mjs  check-control-plane-types.mjs  check-no-double-assertions.mjs  check-node-major.mjs  electron-mirror-env.mjs  ensure-electron-native.mjs  ensure-node-native.mjs  normalize-release-artifacts.mjs  package-server-sea.mjs  package-smoke.mjs  release-evidence.mjs  reset-jobs-to-plan-edit.mjs  resolve-release-source.mjs  run-and-record.mjs  seed-cli-benchmark-mixed.mjs  seed-cli-benchmark-mixed.ts  seed-cli-benchmark.mjs  seed-cli-benchmark.ts  simulate-confirm-b-test.mjs  standalone-smoke.mjs  tmp-query-m1s2.cjs
scripts/ci/: check-control-plane-typecheck-baseline.mjs  check-eslint-baseline.mjs  normalize-release-artifacts.test.mjs  resolve-release-source.test.mjs  run-and-record.test.mjs  source-pattern-scan.mjs  source-pattern-scan.test.mjs  workflow-runtime-contracts.test.mjs
scripts/control-plane/: app-commit.ts  backup.ts  copy-v26.ts  cutover-marker.ts  cutover.ts  legacy-api-guard.ts  legacy-write-guard.mjs  legacy-write-symbols.rg.txt  migration-db.ts  migration-lib.ts  preflight.ts  release-gate.ts  report.ts  restore.ts  validate-copy.ts  write-release-gate.ts
scripts/fixtures/: cli-benchmark-plan.json
scripts/lib/: seed-cli-benchmark-shared.ts
src/main/: app-main.ts  app-secret.ts  cli.ts  data-dir.ts  electron-server-platform.ts  index.ts  port.ts  server.ts  service-discovery.ts  setup-shell.ts  shutdown-signal.ts  storage-initializer.ts  storage-locator.ts  storage-validation.ts
src/preload/: index.ts  window.d.ts
src/renderer/: index.html
src/sandbox/: role-worker-claude-code.ts  role-worker-codex.ts  role-worker-common.ts  role-worker-cursor-job.ts  role-worker-cursorcli.ts  role-worker-opencode.ts  role-worker.ts  supervisor-entry.ts  supervisor-protocol.ts
src/server/: bootstrap.ts  data-paths.ts  error.ts  host-environment.ts  index.ts  response.ts
src/shared/: design-session.ts  draft-plan-resolve.ts  draft-references.ts  frozen-ids.ts  job-display.ts  job-lifecycle.ts  job-realtime.ts  job-recovery-state.ts  job-recovery.ts  job-references.ts  job-suspension.ts  message-thinking.ts  plan-generation-progress.ts  plan-mutations.ts  plan-tree.ts  sse.ts  (+4 more)
tests/: run-workflow.mjs  tsx-tsconfig.mjs
(+955 files in other folders)
