[package]
name = "codeteam-linux-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codeteam-linux-sandbox"
path = "src/main.rs"

[lib]
name = "codeteam_linux_sandbox"
path = "src/lib.rs"
doctest = false

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
codeteam-process-hardening = { workspace = true }
codeteam-sandbox-policy = { workspace = true }
codeteam-sandboxing = { workspace = true }
codeteam-utils-absolute-path = { workspace = true }
globset = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
