[package]
name = "codeteam-sandbox-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codeteam_sandbox_policy"
path = "src/lib.rs"
doctest = false

[dependencies]
codeteam-utils-absolute-path = { path = "../codeteam-utils-absolute-path" }
globset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
