
[package]
name = "codeteam-utils-absolute-path"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lib]
doctest = false
